- Use the default threadpool for federation. - Move test classes into the same package as the code to avoid making test only methods public. - Deprecate old AsyncExecution.search/fill methods and let them run in its own thread.   There should be no external usage of this class.